kubernetes/apps/app-cluster/media/tdarr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Distributed media transcoding and health checks (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://tdarr.krapulax.home"
    gethomepage.dev/icon: "tdarr.png"
    gethomepage.dev/name: "Tdarr (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - tdarr.krapulax.home
  rules:
    - backendRefs:
        - name: tdarr
          namespace: media
          port: 8265
